--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tourism",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
+  "proxy": "https://tourism-wpl-backend.herokuapp.com:443",
   "dependencies": {
     "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^4.2.4",
