--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tourism",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://tourism-wpl-backend.herokuapp.com:443",
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^4.2.4",
@@ -11,7 +11,6 @@
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "react": "^17.0.0",
-    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.0",
     "react-redux": "^7.2.2",
     "react-router-config": "^5.1.1",
