--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.0",
+    "bcrypt": "^5.0.0",
     "bootstrap": "^4.5.3",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
