--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ chrome-user-data
 *.swp
 *.swo
 .history
-
+.eslintcache
 packages/react-devtools-core/dist
 packages/react-devtools-extensions/chrome/build
 packages/react-devtools-extensions/chrome/*.crx
