--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-redux": "^7.2.2",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.4",
+    "react-scripts": "^3.4.4",
     "react-scroll": "^1.8.1",
     "reactstrap": "^8.6.0",
     "redux": "^4.0.5",
