--- a/backend/package.json
+++ b/backend/package.json
@@ -23,9 +23,7 @@
     "mongoose": "^5.10.11",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
+    "nodemon": "^2.0.6",
     "validator": "^13.1.17"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.6"
-  }
 }
